# VINS-Mono

OpenChisel/open_chisel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ar_demo/: CMakeLists.txt
benchmark_publisher/: CMakeLists.txt
camera_model/include/camodocal/chessboard/: Spline.h
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  parameters.cpp  parameters.h  tic_toc.h
noros/: CMakeLists.txt
noros/config/: euroc_config.yaml  tum_config.yaml
noros/src/: chisel_node.cpp  chisel_node.h  chisel_server.cpp  chisel_server.h  conversion.h  global_parameters.cpp  global_parameters.h  main.cpp  mapper.cpp  mapper.h  relocalizer.cpp  relocalizer.h  tracker.cpp  tracker.h  vi_estimator.cpp  vi_estimator.h  vi_system.cpp  vi_system.h  visualizer.cpp  visualizer.h
noros/src/common/: utility.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h
pose_graph/src/utility/: utility.h
stereo_mapper/: CMakeLists.txt
stereo_mapper/config/: euroc_left.yaml
stereo_mapper/src/: calc_cost.h  parameters.cpp  parameters.h  stereo_mapper.cpp  stereo_mapper.h  tic_toc.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_5pts.h
